Optimize percentile calculation in ChamferStats and enhance recognition log properties